gcc/testsuite/rust/rustc/ui/parser/recover-assoc-lifetime-constraint.rs
#[cfg(FALSE)]
fn syntax() {
    bar::<Item = 'a>(); // { dg-error "" "" { target *-*-* } }
}

fn main() {}

